[package]
name = "rosu-ffi"
version = "0.1.0"
edition = "2021"
authors = ["remeliah <anoletenu@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = "0.14.14"
refx-pp = { git = "https://github.com/refx-online/refx-pp-rs", rev = "2e5e1f7261f737c99ece3041a7dda55b4b684980", features = ["sync"] }
rosu-mods = { version = "0.3.0", default-features = false, features = ["serde"] }
serde = { version = "1.0.203" }
serde_json = { version = "1.0.140" }

[build]
target = "i686-pc-windows-msvc"
rustflags = ["-Ctarget-feature=+crt-static"]

[dev-dependencies]
interoptopus_backend_csharp = "0.14.14"
interoptopus_backend_c = "0.14.13"
interoptopus_backend_cpython = "0.14.14"
