[package]
name = "refx-ffi"
version = "0.1.1"
edition = "2021"
authors = ["remeliah <anoletenu@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = "0.14.14"
refx-pp = { git = "https://github.com/refx-online/refx-pp-rs", rev = "e40c53c8b42a3528dfab15d6af774b33c37f8df2", features = ["sync"] }

[build]
target = "i686-pc-windows-msvc"
rustflags = ["-Ctarget-feature=+crt-static"]

[dev-dependencies]
interoptopus_backend_csharp = "0.14.14"
interoptopus_backend_c = "0.14.13"
interoptopus_backend_cpython = "0.14.14"
